; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_sge.c_write_tx_desc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_sge.c_write_tx_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmdQ_e = type { i32, i32, i32, i64 }

@SGE_TX_DESC_MAX_PLEN = common dso_local global i32 0, align 4
@F_CMD_DATAVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cmdQ_e*, i64, i32, i32, i32)* @write_tx_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_tx_desc(%struct.cmdQ_e* %0, i64 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.cmdQ_e*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.cmdQ_e* %0, %struct.cmdQ_e** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* @SGE_TX_DESC_MAX_PLEN, align 4
  %13 = icmp ugt i32 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @BUG_ON(i32 %14)
  %16 = load i64, i64* %7, align 8
  %17 = load %struct.cmdQ_e*, %struct.cmdQ_e** %6, align 8
  %18 = getelementptr inbounds %struct.cmdQ_e, %struct.cmdQ_e* %17, i32 0, i32 3
  store i64 %16, i64* %18, align 8
  %19 = load i64, i64* %7, align 8
  %20 = trunc i64 %19 to i32
  %21 = ashr i32 %20, 32
  %22 = load %struct.cmdQ_e*, %struct.cmdQ_e** %6, align 8
  %23 = getelementptr inbounds %struct.cmdQ_e, %struct.cmdQ_e* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @V_CMD_LEN(i32 %24)
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @V_CMD_GEN1(i32 %26)
  %28 = or i32 %25, %27
  %29 = load %struct.cmdQ_e*, %struct.cmdQ_e** %6, align 8
  %30 = getelementptr inbounds %struct.cmdQ_e, %struct.cmdQ_e* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* @F_CMD_DATAVALID, align 4
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @V_CMD_EOP(i32 %32)
  %34 = or i32 %31, %33
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @V_CMD_GEN2(i32 %35)
  %37 = or i32 %34, %36
  %38 = load %struct.cmdQ_e*, %struct.cmdQ_e** %6, align 8
  %39 = getelementptr inbounds %struct.cmdQ_e, %struct.cmdQ_e* %38, i32 0, i32 2
  store i32 %37, i32* %39, align 8
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @V_CMD_LEN(i32) #1

declare dso_local i32 @V_CMD_GEN1(i32) #1

declare dso_local i32 @V_CMD_EOP(i32) #1

declare dso_local i32 @V_CMD_GEN2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
